<resources>
    <string name="app_name">Bbank</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="skip">skip</string>
    <string name="company_right_for_programming">company right for programming</string>
    <string name="phone">Phone</string>
    <string name="password">PassWord</string>
    <string name="login">login</string>
    <string name="forget_password">Forget PassWord</string>
    <string name="remember_me">Remember me</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="birthday_date">Birthday Date</string>
    <string name="last_donate_date">Last Donate Date</string>
    <string name="send">Send</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="change_password">Change Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="posts">Posts</string>
    <string name="donation_request">Donation Request</string>
    <string name="select_blood_type">Select blood type</string>
    <string name="select_government">Select government</string>
    <string name="select_city">Select city</string>
    <string name="please_wait">Please Wait</string>
    <string name="call">call</string>
    <string name="details">details</string>
    <string name="my_profile">my profile</string>
    <string name="notification_setting">notification setting</string>
    <string name="main">main</string>
    <string name="favorite">favorite</string>
    <string name="use_guid">use guid</string>
    <string name="contact_us">contact us</string>
    <string name="about_app">about app</string>
    <string name="log_out">log out</string>
    <string name="create_new_account">Create New Account</string>
    <string name="donate_request">donate requets</string>
    <string name="donate">Donation</string>

    <string name="age">age</string>
    <string name="hospital_name">hospital name</string>
    <string name="hospital_address">hospital address</string>
    <string name="notes">notes</string>
    <string name="send_request">send request</string>
    <string name="star_app_on_store">star app on store</string>
    <string name="name_patient">Name:</string>
    <string name="blood_type_patient">Blood Type:</string>
    <string name="age_patient">Age:</string>
    <string name="number_of_bag">Number of Bag:</string>
    <string name="hospital_d">Hospital:</string>
    <string name="phone_number">Phone:</string>
    <string name="hospital_adress">Hospital Adress:</string>
    <string name="phone_c">Phone:</string>
    <string name="email_c">Email:</string>
    <string name="massege">massege</string>
    <string name="edit">edit</string>
    <string name="select_bags_number">select Bags Number</string>
    <string name="bags_number">bags number</string>
    <string name="title_activity_maps">Map</string>
    <string name="donation_details">Donation Details</string>
    <string name="notification">notification</string>
    <string name="blood_type">Blood Type</string>
    <string name="set_location">Set Location</string>
    <string name="government">Government</string>
    <string name="save">Save</string>
</resources>
