<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_logo"
        android:layout_marginTop="@dimen/dimens_mmm"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/reset_Password_tv_fragment"
        style="@style/editTextStyle"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/change_password"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/reset_phone_code_et_fragment"
        style="@style/editTextStyle"
        android:hint="@string/confirm_code" />

    <EditText
        android:id="@+id/password_et_register_fragment"
        style="@style/editTextStyle"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/password_confirm_et_register_fragment"
        style="@style/editTextStyle"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_bt_login_fragment"
        style="@style/buttonStyle"
        android:background="@color/deep_blue"
        android:text="@string/register" />
</LinearLayout>
</ScrollView>