<?xml version="1.0" encoding="utf-8"?>
<ScrollView     xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg">
<LinearLayout
    android:id="@+id/linear_login_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_logo"
       android:src="@drawable/ic_logo"
        android:layout_marginTop="@dimen/dimens_mmm"/>
    <EditText
        android:id="@+id/phone_et_login_fragment"
        style="@style/editTextStyle"
        android:layout_marginTop="@dimen/dimens_l"
        android:hint="@string/phone"
        android:inputType="phone"/>
    <EditText
        android:id="@+id/password_et_login_fragment"
        style="@style/editTextStyle"
        android:hint="@string/password"
        android:inputType="textPassword"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/login_chBox_fragment"
        style="@style/margin_padding_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textStyle="bold"/>
        <TextView
            android:id="@+id/login_forgetPass_tv_fragment"
            style="@style/margin_padding_Style"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:drawableStart="@drawable/ic_warnning_icon"
            android:gravity="bottom"
            android:drawablePadding="@dimen/dimens_m"
            android:textStyle="bold"
            android:clickable="true"/>
    </LinearLayout>

    <Button
        android:id="@+id/login_bt_login_fragment"
        style="@style/buttonStyle"
        android:text="@string/login"
        android:background="@color/green"/>
    <Button
        android:id="@+id/register_bt_login_fragment"
        style="@style/buttonStyle"
        android:text="@string/register"
        android:background="@color/blue"/>






</LinearLayout>
</ScrollView>