<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_logo"
            android:layout_marginTop="@dimen/dimens_mmm"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/login_forgetPass_tv_fragment"
            style="@style/editTextStyle"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phone_et_login_fragment"
            style="@style/editTextStyle"
            android:layout_marginTop="@dimen/dimens_l"
            android:hint="@string/phone"
            android:inputType="phone" />

        <Button
            android:id="@+id/register_bt_login_fragment"
            style="@style/buttonStyle"
            android:background="@color/green"
            android:text="@string/send"
            />


    </LinearLayout>
</ScrollView>